syntax = "proto3";

import "auth.proto";
import "order.proto";

package pdus;

option java_package = "protobuf.pdus";
option java_outer_classname = "Pdu";

/**
    PDU que cliente envia
*/

message PduFromClient {
    oneof request{
        OrderRequestData order = 1;
        AuthRequest       auth  = 2;
    }
}

